# polars-plugin-practice

./: .gitignore  Cargo.toml  README.md  pixi.toml  pyproject.toml  test.ipynb
expression_lib/: __init__.py
src/: expression.rs  lib.rs
