[project]
authors = [{name = "Andreas Copan", email = "avcopan@gmail.com"}]
dependencies = []
name = "minimal_plugin"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
requires = ["maturin>=1.9.3,<2"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
rust = ">=1.88.0,<1.89"
rust-src = ">=1.88.0,<2"
compilers = ">=1.11.0,<2"
clang = ">=19.1.7,<21"
maturin = ">=1.9.3,<2"
pip = ">=25.2,<26"

[tool.pixi.target.linux-64.dependencies]
gcc = "*"

[tool.pixi.target.osx-64.dependencies]
clang = "*"

[tool.pixi.target.osx-arm64.dependencies]
clang = "*"

